--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.4",
     "@sista/ai-assistant-react": "^2.2.40",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.4.0",
     "@tanstack/react-query": "^5.62.11",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -68,6 +70,7 @@
     "react-icons": "^5.4.0",
     "react-resizable-panels": "^2.1.4",
     "recharts": "^2.13.0",
+    "stripe": "^17.5.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "tone": "^15.0.4",
