--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "decimal.js": "^10.4.3",
+    "dotenv": "^16.4.7",
     "drizzle-orm": "^0.38.3",
     "drizzle-zod": "^0.6.0",
     "embla-carousel-react": "^8.3.0",
