--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "tsx server/index.ts",
-    "build": "vite build && esbuild server/index.ts --platform=node --bundle --format=esm --outdir=dist",
+    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push"
@@ -61,7 +61,6 @@
     "framer-motion": "^11.13.1",
     "howler": "^2.2.4",
     "input-otp": "^1.2.4",
-    "lightningcss": "^1.28.2",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
     "mysql2": "^3.12.0",
@@ -85,7 +84,6 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@babel/preset-typescript": "^7.26.0",
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
     "@types/express": "4.17.21",
